...
    <variable
      name="view_model"
      type="com.github.dedis.popstellar.home.HomeViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_launch"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
...
        android:gravity="center"
        android:text="@string/text_body_launch"
        android:textSize="@dimen/size_body"
        android:textStyle="italic" />

      <EditText
        android:id="@+id/entry_box_launch"
        android:afterTextChanged="@{(edtitable)->view_model.setLaoName(edtitable.toString())}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:autofillHints=""
        android:hint="@string/text_entry_launch"
...
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_button"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
          android:id="@+id/button_cancel_launch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/button_cancel"
          style="@style/Theme.AppCompat" />

        <Button
          android:id="@+id/button_launch"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginEnd="@dimen/margin_button"
          android:gravity="center"
          android:text="@string/text_button_launch"
          style="@style/Theme.AppCompat" />
...
