<resources>
    <string name="app_name">Student 20 PoP</string>

    <!-- Top Tabs -->
    <string name="tab_home">Home</string>
    <string name="tab_connect">Connect</string>
    <string name="tab_launch">Launch</string>
    <string name="tab_identity">Identity</string>
    <string name="tab_properties">Show/Hide Properties</string>

    <!-- Home -->
    <string name="text_title_welcome">Welcome to Personhood.Online!</string>
    <string name="text_body_welcome">\n\n To connect to a local organization (LAO), please tap Connect above. \n\n To
...

    <!-- Abstract Event-->
    <string name="start_date_required">Start Date*</string>
    <string name="start_time_required">Start Time*</string>
    <string name="end_date_optional">End Date</string>
    <string name="location_optional">Location</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="past_date_not_allowed">Event has to start/end today or in the future</string>
    <string name="end_date_after_start_date_not_allowed">End date has to be after or the same day as the start date
    </string>
    <string name="start_date_after_end_date_not_allowed">Start date must be before or the same day as end date</string>
    <string name="start_time_after_end_time_not_allowed">Start time must be before end time</string>
...
    <string name="meeting_event">Meeting Event</string>
    <string name="create_meeting_event">Create Meeting event</string>
    <string name="meeting_title_required">Meeting Title*</string>

    <!-- Roll-Call Event -->
    <string name="roll_call_event">Roll-Call Event</string>
    <string name="exception_message_empty_lao_name">Trying to set an empty name for the LAO</string>
    <string name="anonymous_explanation">You can participate in organizations and meetings anonymously by leaving this
        box checked.\nIf you wish to reveal your identity to other participants in this organization,\nyou may un-check
        this box and enter the information you wish to reveal below.\nYou must enter identity information in order to
        play an Organizer or Witness role in an organization.
    </string>
    <string name="roll_call_open_attendees">Open</string>
...
