<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_container_home"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent">

    <include
        layout="@layout/tab_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include
        layout="@layout/tab_connect_launch"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <include
...
