<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
  <data>
    <import type="android.view.View" />

    <variable
      name="view_model"
      type="com.github.dedis.popstellar.home.HomeViewModel" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_seed_wallet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginHorizontal="@dimen/margin_text"
      android:gravity="center_vertical"
      android:orientation="vertical">

      <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_seed_wallet"
        android:textSize="@dimen/size_title"
        android:textStyle="bold" />

      <TextView
        android:id="@+id/seed_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="@dimen/size_body"
        android:textStyle="italic" />
      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_button"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <Button
          android:id="@+id/button_confirm_seed"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:text="@string/confirm_button"
          style="@style/Theme.AppCompat" />
      </LinearLayout>
    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>