<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
    android:id="@+id/new_ballot_option_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
      android:id="@+id/new_ballot_option_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:hint="@string/new_ballot_option_hint" />
  </LinearLayout>
</layout>
